k8s-manifests/delivery/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  type: NodePort
  selector:
    app: delivery
  ports:
    - port: 80
      targetPort: 8080
