k8s-manifests/delivery/delivery-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "delivery-ingress"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:414336264239:certificate/550626c9-8c2d-4232-b2f2-08b7de0349e6
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # for creating route-53 record-set
    external-dns.alpha.kubernetes.io/hostname: www.shirwalab.com
  labels:
    app: delivery-ingress
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
          - path: /*
            backend:
              serviceName: "delivery-service"
              servicePort: 80
